<resources>
    <string name="app_name">MyBioApp</string>
    <string name="name">Aishwarya Bijjal</string>
    <string name="my_Bio">Hiiii THis is Aishwarya,\n\n My hometown is Dotihal from North Karnataka
        Presently I put up in bangalore.I have completed My tenth standard in
        adarsha vudhyalaya RMSA kushtagi.I completed My diploma in CVC rural polytechnic Hungund.
        my highest degree qualification is Full time B-tech in Electronics and communication engineering.
        I would like to go for trukking but I have not gone till now.<u><i>I enjoy little things </i></u>and I notices
        little things that others do for me ,I really appreciate those little things.I believe in karma
        that whatever we do will always returns.I have small circle my closed ones,my day will complete after
        spending time to each one of them.I have completed My tenth standard in
        adarsha vudhyalaya RMSA kushtagi.I completed My diploma in CVC rural polytechnic Hungund.
        my highest degree qualification is Full time B-tech in Electronics and communication engineering.
        I would like to go for trukking but I have not gone till now.<u><i>I enjoy little things </i></u>and I notices
        little things that others do for me ,I really appreciate those little things.I believe in karma
        that whatever we do will always returns.I have small circle my closed ones,my day will complete after
        spending time to each one of them.I have completed My tenth standard in
        adarsha vudhyalaya RMSA kushtagi.I completed My diploma in CVC rural polytechnic Hungund.
        my highest degree qualification is Full time B-tech in Electronics and communication engineering.
        I would like to go for trukking but I have not gone till now.<u><i>I enjoy little things </i></u>and I notices
        little things that others do for me ,I really appreciate those little things.I believe in karma
        that whatever we do will always returns.I have small circle my closed ones,my day will complete after
        spending time to each one of them.
         </string>
    <string name="hint_for_hobby">Enter your hobbies</string>
    <string name="button_Done">Button</string>
    <string name="done">Done</string>
    <string name="image_description">android robot image</string>
    <string name="hobbies">making tea</string>
</resources>