<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView2"
            style="@style/nameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/enter_hobbies"
            style="@style/genaral_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_for_hobby"
            android:inputType="textPersonName"

            android:autofillHints="@string/hobbies" />

        <Button
            android:id="@+id/Done_button"
            style="@style/nameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addhobbies"
            android:text="@string/done" />

        <TextView
            android:id="@+id/hobby_text"
            style="@style/genaral_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:text="@string/my_Bio"
                style="@style/genaral_style" />
        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
